This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Extra null terminators in keyword arrays in sqlite module
Type: Stage: resolved
Components: Library (Lib) Versions: Python 3.9
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: alex.henrie, berker.peksag
Priority: normal Keywords: patch

Created on 2020-01-30 01:43 by alex.henrie, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 18267 merged alex.henrie, 2020-01-30 01:46
Messages (2)
msg361001 - (view) Author: Alex Henrie (alex.henrie) * Date: 2020-01-30 01:43
Modules/_sqlite/cursor.c currently has the following variable declaration:

    static char *kwlist[] = {"size", NULL, NULL};

The second null terminator is unnecessary and detrimental in that it makes the code harder to read and understand.

Modules/_sqlite/module.c has two additional kwlist variables with the same problem.
msg361007 - (view) Author: Berker Peksag (berker.peksag) * (Python committer) Date: 2020-01-30 04:12
New changeset 188bb5b1e868eecf2342195dc45caa332ac3b6c7 by Alex Henrie in branch 'master':
bpo-39494: Remove extra null terminators from kwlist vars (GH-18267)
https://github.com/python/cpython/commit/188bb5b1e868eecf2342195dc45caa332ac3b6c7
History
Date User Action Args
2022-04-11 14:59:26adminsetgithub: 83675
2020-01-30 04:13:32berker.peksagsetstatus: open -> closed
type: resource usage ->
resolution: fixed
stage: patch review -> resolved
2020-01-30 04:12:56berker.peksagsetnosy: + berker.peksag
messages: + msg361007
2020-01-30 01:46:51alex.henriesetkeywords: + patch
stage: patch review
pull_requests: + pull_request17644
2020-01-30 01:43:52alex.henriecreate