bpo-39494: Remove extra null terminators from kwlist vars (GH-18267)